<resources>
    <string name="app_name">Language Center</string>
    <string name="server_client_id">888345009427-ihklblp8vucbrpp8mj1ob681pmgr940l.apps.googleusercontent.com</string>
    <string name="community">Community</string>
    <string name="chats">Chats</string>
    <string name="friend_group">Friend group</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign In</string>
    <string name="str_name">Name : %1$s</string>
    <string name="str_email">Email : %1$s</string>
    <string name="str_gender">Gender : %1$s</string>
    <string name="str_birth_date">Birth date : %1$s</string>
    <string name="str_age">Age : %1$d</string>
    <string name="str_about_me">About me : %1$s</string>
    <string name="greeting">Greeting</string>
    <string name="hello_english">Hello</string>
    <string name="hello_thai">สวัสดี</string>
    <string name="search">Search</string>
    <string name="english">English</string>
    <string name="vocabulary_english">Vocabulary english</string>
    <string name="thai">Thai</string>
    <string name="vocabulary_thai">คำศัพท์ภาษาไทย</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_chat_group">Add chat group</string>
    <string name="message">Message</string>
    <string name="messages">Message...</string>
    <string name="dialog_sign_out_message">Do you really want to sign out?</string>
    <string name="given_name">Given name</string>
    <string name="locale">Locale</string>
    <string name="locale_native">Locale native</string>
    <string name="locale_learning">Locale learning</string>
    <string name="family_name">Family name</string>
    <string name="email">Email</string>
    <string name="about_me">About me</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth date</string>
    <string name="name">Name</string>
    <string name="skip">Skip</string>
    <string name="learning_language">Learning language</string>
    <string name="native_language">Native language</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="next">Next</string>
    <string name="level">Level</string>
    <string name="error_message_sign_in_network">Please check internet</string>
    <string name="error_message_sign_in_developer">Please check oauth developer</string>
    <string name="text_native">Native</string>
    <string name="text_learning">Learning</string>
    <string name="rename">Rename</string>
    <string name="more">More</string>
    <string name="remove">Remove</string>
    <string name="dialog_remove_chat_group_title">Remove chat group</string>
    <string name="dialog_remove_chat_group_message">Do you really want to delete?</string>
    <string name="rename_chat_group">Rename chat group</string>
    <string name="dialog_add_chat_group_detail_title">Add chat group detail</string>
    <string name="dialog_add_chat_group_detail_message">Do you really want to add chat group detail?</string>
    <string name="change_chat_group">Change chat group</string>
    <string name="dialog_remove_chat_group_detail_title">Remove chat group detail</string>
    <string name="dialog_remove_chat_group_detail_message">Do you really want to delete?</string>
    <string name="friend_group_detail">Friend group detail</string>
    <string name="add_chat_group_detail">Add chat group detail</string>
    <string name="user_info">User info</string>
    <string name="resend_message">Resend message</string>
    <string name="translate">Translate</string>
    <string name="th">TH</string>
    <string name="en">EN</string>
    <string name="translation">Translation</string>
    <string name="add_translate">Add translate</string>
    <string name="thai_to_english">Thai to English</string>
    <string name="english_to_thai">English to Thai</string>
</resources>