<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_community"
        android:title="@string/community" />

    <item
        android:id="@+id/chatsFragment"
        android:icon="@drawable/ic_chats"
        android:title="@string/chats" />

    <item
        android:id="@+id/friendGroupFragment"
        android:icon="@drawable/ic_friend_group"
        android:title="@string/friend_group" />

    <item
        android:id="@+id/vocabularyFragment"
        android:icon="@drawable/ic_vocabulary"
        android:title="@string/vocabulary" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
