<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_app"
    tools:context=".presentation.userinfo.UserInfoActivity">

    <TextView
        android:id="@+id/tvCommunity"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/community"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPicture"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/tvGender"
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        tools:text="@string/gender" />

    <TextView
        android:id="@+id/tvBirthDate"
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGender"
        tools:text="@string/birth_date" />

    <TextView
        android:id="@+id/tvAboutMe"
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthDate"
        tools:text="@string/about_me" />

    <TextView
        android:id="@+id/tvLocaleNative"
        style="@style/Text.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/locale_native"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewLocalNatives"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewLocalNatives"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutMe" />

    <TextView
        android:id="@+id/tvLocaleLearning"
        style="@style/Text.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/locale_learning"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewLocalLearnings"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewLocalLearnings"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutMe" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLocalNatives"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recyclerViewLocalLearnings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocaleNative"
        tools:listitem="@layout/item_user_info_locale" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLocalLearnings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recyclerViewLocalNatives"
        app:layout_constraintTop_toBottomOf="@+id/tvLocaleLearning"
        tools:listitem="@layout/item_user_info_locale" />

</androidx.constraintlayout.widget.ConstraintLayout>
